--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,18 @@
 #header {
   background-image: url("../images/assets/backgrounds/landing.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  height: 600px;
   text-align: center;
   color: #FFFFFF;
+}
+.logobig {
+  padding-left: 400px;
+  padding-right: 400px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.meals {
+  height: 200px;
 }
 #breakfast {
   background-image: url("../images/assets/foodtop/breakfast.jpg");
@@ -35,7 +44,7 @@
   padding-bottom: 75px;
 }
 #lunch {
-  background-image: url("../images/assets/foodtop/lunch.jpg");
+  background-image: url("../images/assets/foodtop/dinner2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
@@ -49,28 +58,44 @@
   color: #FFFFFF;
 }
 #minirow {
-  text-align: center;
 }
 #partytime {
-  background-color: #EF5050;
+  background-color: #D97338;
   color: #FFFFFF;
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  text-align: center;
+  height: 100px;
+  padding-left: 75px;
+  padding-right: 75px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 #happyhour {
   background-color: #FFFFFF;
   color: #000000;
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  text-align: center;
+  height: 100px;
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-.section4 {
-  background-color: url("../images/assets/backgrounds/foodsBg.jpeg");
+#white-section {
+  padding-top: 75px;
+  height: 600px;
+}
+#white-section2 {
+  padding-top: 20px;
+  height: 600px;
+}
+#section4 {
+  background-color: url("../images/assets/fastfood/chickenPizza.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  height: 300px;
+}
+.gallery {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  height: 200px;
 }
 .logo {
   text-align: center;
