--- a/css/styles.css
+++ b/css/styles.css
@@ -89,15 +89,17 @@
   height: 600px;
 }
 .section4 {
-  background-color: url("../images/assets/backgrounds/foodsBg.jpg");
+  background-image: url("../images/assets/backgrounds/foodsBg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 300px;
+  height: 400px;
 }
 .gallery {
-  padding-top: 50px;
-  padding-bottom: 50px;
   height: 200px;
+  margin-top: 100px;
+  margin-right: 125px;
+  margin-bottom: 50px;
+  margin-left: 125px;
 }
 .my-logos {
   text-align: center;
@@ -193,9 +195,21 @@ input {
 }
 .about {
   height: 200px;
-  border-style: dotted;
   margin-top: 50px;
   margin-bottom: 50px;
+  margin-left: 175px;
+  margin-right: 175px;
   width: 70%;
   content-align: center;
+  box-shadow: 2px 2px 2px 2px #ECDEDE;
+  text-align: center;
+}
+.customers {
+  padding: 15px 20px 15px 20px;
+}
+.menu {
+  padding: 15px 20px 15px 20px;
+}
+h3.customers {
+  color: #D97338;
 }
