--- a/css/styles.css
+++ b/css/styles.css
@@ -96,10 +96,11 @@
 }
 .gallery {
   height: 200px;
-  margin-top: 100px;
-  margin-right: 125px;
-  margin-bottom: 50px;
-  margin-left: 125px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  background-color: #fff;
 }
 .my-logos {
   text-align: center;
