--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
-.container {
+.container-fluid{
   font-family: cursive;
   height: 100%;
 }
-#header {
+.jumbotron {
   background-image: url("../images/assets/backgrounds/landing.jpg");
   background-repeat: no-repeat;
-  height: 600px;
+  height: 636px;
   text-align: center;
   color: #FFFFFF;
 }
@@ -13,7 +13,7 @@
   padding-left: 400px;
   padding-right: 400px;
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 300px;
 }
 .meals {
   height: 200px;
@@ -92,15 +92,19 @@
   background-image: url("../images/assets/backgrounds/foodsBg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 400px;
+  height: 599px;
 }
 .gallery {
-  height: 200px;
-  margin-top: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
-  margin-left: 0px;
+  height: 400px;
+  margin-top: 100px;
+  margin-right: 75px;
+  margin-bottom: 100px;
+  margin-left: 75px;
   background-color: #fff;
+  text-align: center;
+}
+img {
+  margin-top: 90px;
 }
 .my-logos {
   text-align: center;
@@ -211,6 +215,6 @@ input {
 .menu {
   padding: 15px 20px 15px 20px;
 }
-h3.customers {
+h4.customers {
   color: #D97338;
 }
